@@ -1,3 +1,7 @@
+2007-06-22  Brian Matherly  <brian@gramps-project.org>
+	* src/docgen/Pdfdoc.py: 0001055: Pictures of the gallery are not used in the
+	  detailed ancestor's report when output format is PDF
+
 2007-06-20  Don Allingham  <don@gramps-project.org>
 	* src/DbManager.py: Catch the icons properly
 	* src/GrampsDb/_GrampsDBDir.py: catch error on lock file deletion
